// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IconField should be open when has value 1`] = `
<div
  className="icon-selector"
>
  <ToggleDisplay
    hideLabel={
      <span>
        <Translate>
          remove icon
        </Translate>
        <Connect(Icon)
          icon="eye-slash"
        />
      </span>
    }
    onHide={[Function]}
    open={true}
    showLabel={
      <span>
        <Translate>
          add icon
        </Translate>
        <Connect(Icon)
          icon="eye"
        />
      </span>
    }
  >
    <ul
      className="search__filter"
    >
      <li>
        <label>
          <Translate>
            Icon
          </Translate>
           / 
          <Translate>
            Flag
          </Translate>
        </label>
      </li>
      <li
        className="wide"
      >
        <IconSelector
          model=".icon"
        />
      </li>
    </ul>
  </ToggleDisplay>
</div>
`;

exports[`IconField should render IconSelector with toggleDisplay 1`] = `
<div
  className="icon-selector"
>
  <ToggleDisplay
    hideLabel={
      <span>
        <Translate>
          remove icon
        </Translate>
        <Connect(Icon)
          icon="eye-slash"
        />
      </span>
    }
    onHide={[Function]}
    open={false}
    showLabel={
      <span>
        <Translate>
          add icon
        </Translate>
        <Connect(Icon)
          icon="eye"
        />
      </span>
    }
  >
    <ul
      className="search__filter"
    >
      <li>
        <label>
          <Translate>
            Icon
          </Translate>
           / 
          <Translate>
            Flag
          </Translate>
        </label>
      </li>
      <li
        className="wide"
      >
        <IconSelector
          model=".icon"
        />
      </li>
    </ul>
  </ToggleDisplay>
</div>
`;
